# ScannerApp

./: ScannerApp.py  dev-requirements.txt  requirements.txt
.github/workflows/: build.yml  pyproject.toml  setup.cfg
