[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parikhshit-scanner"
version = "0.1.0"
description = "Cross-platform scanner with PyQt6"
authors = [
    { name = "Parikhshit", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "PyQt6>=6.6.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0"
]

[tool.setuptools.packages.find]
where = ["."]
