[metadata]
name = scanner-app
version = 0.1.0
description = Cross-platform scanner with PyQt6 and aiohttp
author = Parikhshit Puttu
author_email = your@email.com
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.9
packages = find:
install_requires =
    PyQt6>=6.6.0
    aiohttp>=3.9.0
    requests>=2.31.0

[options.extras_require]
dev =
    pytest>=8.2.0
    pytest-asyncio>=0.23.0
    black>=24.3.0
    flake8>=7.0.0
    mypy>=1.10.0
    build>=1.2.1

[options.packages.find]
where = .
